# codex-wrapper

./: .gitignore  Audit of the Codex Wrapper and Coverage Gaps.docx.md  BACKLOG.md  CLI_MATRIX.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  Makefile  README.md  _claude_code_update_summary.md  _codex_cli_pr_body.md  _codex_cli_work_queue.md  aarch64-apple-darwin.json  capability_manifest.json  darwin-arm64.json  deny.toml  refactor_workplan.md  win32-x64.json  x86_64-pc-windows-msvc.json  x86_64-unknown-linux-musl.json
crates/claude_code/: Cargo.toml  EXAMPLES.md  README.md  STREAM_JSON_COMPAT.md
crates/claude_code/examples/: doctor.rs  examples_manifest.json  help_version.rs  mcp_list.rs  mcp_manage.rs  multi_turn_continue.rs  multi_turn_fork.rs  multi_turn_resume.rs  plugin_manage.rs  print_flows_manifest.json  print_include_partial_messages.rs  print_json.rs  print_session_id.rs  print_stream_json.rs  print_text.rs  setup_token_flow.rs  update.rs
crates/claude_code/examples/support/: real_cli.rs
crates/claude_code/src/: client.rs  error.rs  lib.rs  process.rs  request.rs  stream_json.rs  wrapper_coverage_manifest.rs
crates/claude_code/src/builder/: mod.rs
crates/claude_code/src/cli/: mod.rs
crates/claude_code/src/client/: mod.rs  setup_token.rs
crates/claude_code/src/commands/: command.rs  doctor.rs  mcp.rs  mod.rs  (+4 more)
crates/claude_code/tests/: doctor_enter.rs  examples_manifest.rs  help_version_argv.rs  help_version_flow.rs  mcp_argv.rs  plugin_argv.rs  print_flows_manifest.rs  print_resume_value_flow.rs  request_argv.rs  root_flags_argv.rs  setup_token_flow.rs  setup_token_no_url_flow.rs  stream_json.rs  stream_json_contract.rs  update_argv.rs  update_flow.rs
crates/codex/: Cargo.toml  EXAMPLES.md  HANDOFF.md  JSONL_COMPAT.md  README.md
crates/codex/examples/: app_server_codegen.rs  app_server_thread_turn.rs  app_server_turns.rs  auth_flow.rs  bundled_binary.rs  bundled_binary_home.rs  capability_snapshot.rs  cli_overrides.rs  cloud_tasks.rs  codex_home.rs  debug_cmd.rs  examples_manifest.json  exec_resume_apply_wrapper.rs  execpolicy_check.rs  feature_detection.rs  features_cmd.rs  features_toggle.rs  filter_rollout_event_msg.rs  help_scopes.rs  json_stream.rs  mcp_codex_flow.rs  mcp_codex_reply.rs  mcp_codex_tool.rs  mcp_manage.rs  parse_rollout_jsonl.rs  responses_api_proxy.rs  resume_apply.rs  review_commands.rs  run_sandbox.rs  session_commands.rs  stdio_to_uds.rs  stream_events.rs  stream_last_message.rs  stream_with_log.rs
crates/codex/src/: apply_diff.rs  auth.rs  bundled_binary.rs  client_core.rs  defaults.rs  error.rs  events.rs  exec.rs  execpolicy.rs  home.rs  jsonl.rs  lib.rs  mcp.rs  process.rs  tests.rs  version.rs  wrapper_coverage_manifest.rs
crates/codex/tests/: binary_env_integration.rs  cli_e2e.rs  examples_manifest.rs  fixtures.rs  jsonl_compat.rs  jsonl_parser_api.rs  new_cli_surfaces.rs
crates/wrapper_events/: Cargo.toml
crates/wrapper_events/src/: channel.rs  claude_code_adapter.rs  codex_adapter.rs  config.rs  error.rs  ingest.rs  lib.rs  line_parser.rs  normalized.rs
crates/wrapper_events/tests/: claude_normalization.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: claude_snapshot.rs  claude_union.rs  claude_wrapper_coverage.rs  codex_report.rs  codex_retain.rs  codex_snapshot.rs  codex_union.rs  codex_validate.rs  codex_version_metadata.rs  main.rs  parity_triad_scaffold.rs
crates/xtask/tests/: c0_spec_snapshot.rs  c0_spec_validate.rs  c1_spec_union.rs  c2_spec_wrapper_coverage.rs  c3_spec_reports_metadata_retain.rs  c4_spec_ci_wiring.rs  c5_spec_iu_subtree_inheritance.rs  c6_spec_report_iu_validator.rs  c7_spec_iu_roots_adoption.rs
(+890 files in other folders)
