[package]
name = "codex"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Async wrapper around the Codex CLI for programmatic prompting"
license = "MIT OR Apache-2.0"
keywords = ["codex", "cli", "wrapper", "agent"]
categories = ["api-bindings", "command-line-interface"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
