[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing"] }
